Fix z-index on preview box

--- a/index.css
+++ b/index.css
@@ -423,7 +423,7 @@ nav .fa {
     background: #fff;
     max-width: 700px;
     width: 100%;
-    z-index: 5;
+    z-index: 120;
     opacity: 0;
     pointer-events: none;
     border-radius: 3px;
@@ -470,7 +470,7 @@ nav .fa {
     top: 0;
     height: 100%;
     width: 100%;
-    z-index: 2;
+    z-index: 110;
     display: none;
     background: rgba(0,0,0,0.4);
   }
